2010-10-21  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_mkhomedir/mkhomedir_helper.c (rec_mkdir): Remove.
	(create_homedir): Use mkdir() instead of rec_mkdir().
	(make_parent_dirs): New function.
	(main): Use make_parent_dirs() to create parent directories only
	for the home directory itself.

2010-10-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/support.c (_unix_getpwnam): Don't allocate
	unneeded buffer for uid/gid [sf#3059572].

2010-10-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_get_authtok.3.xml: Fix xml code.

	* doc/man/Makefile.am: Fix build dependencys of pam_get_authtok.3.

	* xtests/Makefile.am: Only build xtests if we run xtests.
	* configure.in: Check for libdb with symbol versions, too.
	Patch from Diego Elio Pettenò.

	* modules/pam_mkhomedir/mkhomedir_helper.c (rec_mkdir): Create
	parent directories always with mode 0755.
	(create_homedir): Create main directory with mode 0700 at first.

2010-10-19  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_selinux/Makefile.am (pam_selinux_la_LIBADD): Add
	@LIBAUDIT@.

	* m4/ld-O1.m4 (PAM_LD_O1): Fix typo.

	* m4/ld-no-undefined.m4: New file.
	* configure.in: Use PAM_LD_NO_UNDEFINED.
	* Makefile.am (M4_FILES): Add m4/ld-no-undefined.m4.

	* modules/pam_selinux/pam_selinux.c (verbose_message): Remove.
	(pam_sm_open_session): Call send_text() instead of verbose_message().

2010-10-19  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_env/pam_env.8.xml: Document side effects of
	environment variables in the stack.
	* modules/pam_exec/pam_exec.8.xml: Document that user can
	have controll over the environment.

2010-10-07  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_selinux/pam_selinux.c (verbose_message): Fix format
	string.

2010-10-04  Dmitry V. Levin  <ldv@altlinux.org>

	* libpam/pam_modutil_priv.c: New file.
	* libpam/Makefile.am (libpam_la_SOURCES): Add it.
	* libpam/include/security/pam_modutil.h (struct pam_modutil_privs,