@@ -1,3 +1,9 @@
+2010-10-22  Tomas Mraz  <tm@t8m.info>
+
+	* modules/pam_namespace/pam_namespace.c (inst_init): Use execle()
+	to execute the init script with clean environment. (CVE-2010-3853)
+	(cleanup_tmpdirs): Likewise for executing rm.
+
 2010-10-21  Dmitry V. Levin  <ldv@altlinux.org>
 
 	* modules/pam_mkhomedir/mkhomedir_helper.c (rec_mkdir): Remove.
